fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ main{
 footer{ text-align: center;}
 
 @media(max-width:900px){
-  body{  overflow-x: hidden ;}
+  body{ overflow-x: hidden;}
 
 .click-here-button a{ 
     font-size: 15px;}
@@ -84,11 +84,13 @@ filter: brightness(90%) ;}
 .card-description{ height: 100px !important;}
 table{ font-size: 16px;}
 th, tbody{padding: 3px !important;
-    margin: 5px;
+    margin: 10px;
 }
-table{ height: 60px;
-margin:10px auto}
-.long-tittle{width: 95px !important;}}
+table{ height: 70px;
+margin:10px auto
+}
+.table{ padding: 0;}
+.long-tittle{width: 90px !important;}}
 
 
 
